Now everything works. TODO: UI, JavaDocs